# xfiles

./: .coveragerc  .flake8  .gitignore  .xproject_python  Makefile  hatch_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
toolkit/: memory.py
xkits_file/: __init__.py  attribute.py  download.py  filestat.py  linefile.py  safefile.py  scanner.py  template.py
xkits_file/unittest/: test_download.py  test_filestat.py  test_linefile.py  test_safefile.py  test_scanner.py  test_template.py
xkits_fileviewer/: __init__.py  linefile.py
xkits_fileviewer/unittest/: test_fileviewer.py  test_linefile.py
