[build-system]
requires = ["xpip-build>=1.4", "hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
dynamic = ["name", "urls", "authors", "version", "description", "dependencies"]
readme = {file = "readme.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["file"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
fileviewer = "xkits_fileviewer:main"
linefile = "xkits_fileviewer.linefile:main"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.sdist]
packages = [
    "xkits_file",
    "xkits_fileviewer",
]
exclude = [
    "xkits_file/unittest",
    "xkits_fileviewer/unittest",
]

[tool.hatch.build.targets.wheel]
packages = [
    "xkits_file",
    "xkits_fileviewer",
]
exclude = [
    "xkits_file/unittest",
    "xkits_fileviewer/unittest",
]

[tool.hatch.build.targets.sdist.force-include]

[tool.hatch.build.targets.wheel.force-include]
