[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-requirements-txt", "hatchling", "xpip-build>=1.4",]

[project]
classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3",]
dynamic = [ "name", "urls", "authors", "version", "description", "dependencies",]
keywords = [ "file",]
license-files = [ "LICENSE",]
requires-python = ">=3.8"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]
fileviewer = "xkits_fileviewer:main"
linefile = "xkits_fileviewer.linefile:main"

[tool.hatch.build.targets.sdist]
exclude = [ "xkits_file/unittest", "xkits_fileviewer/unittest",]
packages = [ "xkits_file", "xkits_fileviewer",]

[tool.hatch.build.targets.wheel]
exclude = [ "xkits_file/unittest", "xkits_fileviewer/unittest",]
packages = [ "xkits_file", "xkits_fileviewer",]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]

[tool.hatch.build.targets.sdist.force-include]

[tool.hatch.build.targets.wheel.force-include]
